# axum-yew-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  justfile
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
